--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naong",
+  "name": "db",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -7,24 +7,38 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/*/.ts\" \"test/*/.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/*/.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm-default": "npm run build && npx typeorm -d ./dist/db/data-source.js",
+    "typeorm:generate": "npm run build && npx typeorm -d ./dist/db/data-source.js migration:generate",
+    "typeorm:run": "npm run typeorm-default -- migration:run",
+    "typeorm:revert": "npm run typeorm-default -- migration:revert",
+    "typeorm:drop": "npm run typeorm-default schema:drop",
+    "typeorm-seed": "npm run build && npx typeorm -d ./dist/db/data-source-seed.js",
+    "typeorm-seed:create": "npm run typeorm-seed -- migration:create",
+    "typeorm-seed:run": "npm run typeorm-seed -- migration:run",
+    "typeorm-seed:revert": "npm run typeorm-seed -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -61,7 +75,7 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "*/.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
