--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "typeorm:revert": "npm run typeorm-default -- migration:revert",
     "typeorm:drop": "npm run typeorm-default schema:drop",
     "typeorm-seed": "npm run build && npx typeorm -d ./dist/db/data-source-seed.js",
-    "typeorm-seed:create": "npm run typeorm-seed -- migration:create",
+    "typeorm-seed:create": "npm run typeorm-seed -- migration:create src/migration/CreateSetor",
     "typeorm-seed:run": "npm run typeorm-seed -- migration:run",
     "typeorm-seed:revert": "npm run typeorm-seed -- migration:revert"
   },
